--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import url(http://fonts.googleapis.com/css?family=Staatliches:100,300,400,600,700);
+
+body {
+  font-family: 'Staatliches';
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
